@@ -5,6 +5,7 @@ Log:
 - 21/09/2006, version 1.0.1:
 	- fixed miniunz.c and minizip.c trying to include DOS/Win32 headers under OS X (kevin)
 	- changed TIEXPORT into TIEXPORT2
+	- again, disabled file checksum verification
 	
 - 17/09/2006, tagged as version 1.0.0: roms
 	- added support for TILIBS_DEPRECATED (exports symbols which have been tagged as deprecated)
